// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`excludes things when asked 1`] = `
Array [
  Object {
    "enums": Array [
      Object {
        "name": "source",
        "values": Array [
          "github",
          "bitbucket",
        ],
      },
    ],
    "flavor": "pg",
    "name": "public",
    "tables": Array [
      Object {
        "columns": Array [
          Object {
            "columnType": "text",
            "comment": null,
            "enumPath": undefined,
            "foreignKeys": Array [],
            "hasDefault": false,
            "name": "id",
            "nullable": false,
            "type": "string",
            "uniqueConstraints": Array [],
          },
          Object {
            "columnType": "timestamp with time zone",
            "comment": null,
            "enumPath": undefined,
            "foreignKeys": Array [],
            "hasDefault": true,
            "name": "created_at",
            "nullable": false,
            "type": "Date",
            "uniqueConstraints": Array [],
          },
          Object {
            "columnType": "timestamp with time zone",
            "comment": null,
            "enumPath": undefined,
            "foreignKeys": Array [],
            "hasDefault": true,
            "name": "updated_at",
            "nullable": false,
            "type": "Date",
            "uniqueConstraints": Array [],
          },
        ],
        "comment": "Users can have multiple accounts",
        "name": "users",
        "primaryKeyColumn": "id",
        "primaryKeyType": "string",
      },
      Object {
        "columns": Array [
          Object {
            "columnType": "text",
            "comment": null,
            "enumPath": undefined,
            "foreignKeys": Array [],
            "hasDefault": false,
            "name": "id",
            "nullable": false,
            "type": "string",
            "uniqueConstraints": Array [],
          },
          Object {
            "columnType": "timestamp with time zone",
            "comment": null,
            "enumPath": undefined,
            "foreignKeys": Array [],
            "hasDefault": true,
            "name": "created_at",
            "nullable": false,
            "type": "Date",
            "uniqueConstraints": Array [],
          },
          Object {
            "columnType": "timestamp with time zone",
            "comment": null,
            "enumPath": undefined,
            "foreignKeys": Array [],
            "hasDefault": true,
            "name": "updated_at",
            "nullable": false,
            "type": "Date",
            "uniqueConstraints": Array [],
          },
          Object {
            "columnType": "USER-DEFINED",
            "comment": null,
            "enumPath": "public.source",
            "foreignKeys": Array [],
            "hasDefault": false,
            "name": "source",
            "nullable": false,
            "type": "enum",
            "uniqueConstraints": Array [],
          },
          Object {
            "columnType": "text",
            "comment": null,
            "enumPath": undefined,
            "foreignKeys": Array [],
            "hasDefault": false,
            "name": "uniqueIdentifier",
            "nullable": false,
            "type": "string",
            "uniqueConstraints": Array [],
          },
          Object {
            "columnType": "text",
            "comment": "Users can have multiple accounts",
            "enumPath": undefined,
            "foreignKeys": Array [
              Object {
                "column": "id",
                "schema": "public",
                "table": "users",
              },
            ],
            "hasDefault": false,
            "name": "userId",
            "nullable": false,
            "type": "string",
            "uniqueConstraints": Array [],
          },
          Object {
            "columnType": "jsonb",
            "comment": null,
            "enumPath": undefined,
            "foreignKeys": Array [],
            "hasDefault": false,
            "name": "rawUserData",
            "nullable": true,
            "type": "AnyJson",
            "uniqueConstraints": Array [],
          },
        ],
        "comment": "UserAccount table comment",
        "name": "userAccounts",
        "primaryKeyColumn": "id",
        "primaryKeyType": "string",
      },
    ],
  },
]
`;

exports[`returns a schema in the right shape 1`] = `
Array [
  Object {
    "enums": Array [
      Object {
        "name": "source",
        "values": Array [
          "github",
          "bitbucket",
        ],
      },
    ],
    "flavor": "pg",
    "name": "public",
    "tables": Array [
      Object {
        "columns": Array [
          Object {
            "columnType": "text",
            "comment": null,
            "enumPath": undefined,
            "foreignKeys": Array [],
            "hasDefault": false,
            "name": "id",
            "nullable": false,
            "type": "string",
            "uniqueConstraints": Array [],
          },
          Object {
            "columnType": "timestamp with time zone",
            "comment": null,
            "enumPath": undefined,
            "foreignKeys": Array [],
            "hasDefault": true,
            "name": "created_at",
            "nullable": false,
            "type": "Date",
            "uniqueConstraints": Array [],
          },
          Object {
            "columnType": "timestamp with time zone",
            "comment": null,
            "enumPath": undefined,
            "foreignKeys": Array [],
            "hasDefault": true,
            "name": "updated_at",
            "nullable": false,
            "type": "Date",
            "uniqueConstraints": Array [],
          },
        ],
        "comment": "Users can have multiple accounts",
        "name": "users",
        "primaryKeyColumn": "id",
        "primaryKeyType": "string",
      },
      Object {
        "columns": Array [
          Object {
            "columnType": "text",
            "comment": null,
            "enumPath": undefined,
            "foreignKeys": Array [],
            "hasDefault": false,
            "name": "id",
            "nullable": false,
            "type": "string",
            "uniqueConstraints": Array [],
          },
          Object {
            "columnType": "timestamp with time zone",
            "comment": null,
            "enumPath": undefined,
            "foreignKeys": Array [],
            "hasDefault": true,
            "name": "created_at",
            "nullable": false,
            "type": "Date",
            "uniqueConstraints": Array [],
          },
          Object {
            "columnType": "timestamp with time zone",
            "comment": null,
            "enumPath": undefined,
            "foreignKeys": Array [],
            "hasDefault": true,
            "name": "updated_at",
            "nullable": false,
            "type": "Date",
            "uniqueConstraints": Array [],
          },
          Object {
            "columnType": "USER-DEFINED",
            "comment": null,
            "enumPath": "public.source",
            "foreignKeys": Array [],
            "hasDefault": false,
            "name": "source",
            "nullable": false,
            "type": "enum",
            "uniqueConstraints": Array [],
          },
          Object {
            "columnType": "text",
            "comment": null,
            "enumPath": undefined,
            "foreignKeys": Array [],
            "hasDefault": false,
            "name": "uniqueIdentifier",
            "nullable": false,
            "type": "string",
            "uniqueConstraints": Array [],
          },
          Object {
            "columnType": "text",
            "comment": "Users can have multiple accounts",
            "enumPath": undefined,
            "foreignKeys": Array [
              Object {
                "column": "id",
                "schema": "public",
                "table": "users",
              },
            ],
            "hasDefault": false,
            "name": "userId",
            "nullable": false,
            "type": "string",
            "uniqueConstraints": Array [],
          },
          Object {
            "columnType": "jsonb",
            "comment": null,
            "enumPath": undefined,
            "foreignKeys": Array [],
            "hasDefault": false,
            "name": "rawUserData",
            "nullable": true,
            "type": "AnyJson",
            "uniqueConstraints": Array [],
          },
        ],
        "comment": "UserAccount table comment",
        "name": "userAccounts",
        "primaryKeyColumn": "id",
        "primaryKeyType": "string",
      },
      Object {
        "columns": Array [
          Object {
            "columnType": "integer",
            "comment": null,
            "enumPath": undefined,
            "foreignKeys": Array [],
            "hasDefault": true,
            "name": "id",
            "nullable": false,
            "type": "number",
            "uniqueConstraints": Array [],
          },
          Object {
            "columnType": "character varying",
            "comment": null,
            "enumPath": undefined,
            "foreignKeys": Array [],
            "hasDefault": false,
            "name": "name",
            "nullable": true,
            "type": "string",
            "uniqueConstraints": Array [],
          },
          Object {
            "columnType": "integer",
            "comment": null,
            "enumPath": undefined,
            "foreignKeys": Array [],
            "hasDefault": false,
            "name": "batch",
            "nullable": true,
            "type": "number",
            "uniqueConstraints": Array [],
          },
          Object {
            "columnType": "timestamp with time zone",
            "comment": null,
            "enumPath": undefined,
            "foreignKeys": Array [],
            "hasDefault": false,
            "name": "migration_time",
            "nullable": true,
            "type": "Date",
            "uniqueConstraints": Array [],
          },
        ],
        "comment": null,
        "name": "knex_migrations",
        "primaryKeyColumn": "id",
        "primaryKeyType": "number",
      },
      Object {
        "columns": Array [
          Object {
            "columnType": "integer",
            "comment": null,
            "enumPath": undefined,
            "foreignKeys": Array [],
            "hasDefault": true,
            "name": "index",
            "nullable": false,
            "type": "number",
            "uniqueConstraints": Array [],
          },
          Object {
            "columnType": "integer",
            "comment": null,
            "enumPath": undefined,
            "foreignKeys": Array [],
            "hasDefault": false,
            "name": "is_locked",
            "nullable": true,
            "type": "number",
            "uniqueConstraints": Array [],
          },
        ],
        "comment": null,
        "name": "knex_migrations_lock",
        "primaryKeyColumn": "index",
        "primaryKeyType": "number",
      },
    ],
  },
]
`;
